<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_list_item"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/customborder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dest_card_cities"
        android:gravity="center|top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dest_card_city_name_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dest_card_sample_city1"
            android:textSize="14sp"
            android:textColor="@color/gold"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/spaced_hyphen"
            android:textColor="@color/gold"/>

        <TextView
            android:id="@+id/dest_card_city_name_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dest_card_sample_city2"
            android:textSize="14sp"
            android:textColor="@color/gold"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/dest_card_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dest_card_cities"
        android:text="@string/sample_number"
        android:textSize="16sp"
        android:textColor="@color/gold"
        android:gravity="center"/>

</RelativeLayout>