<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fysh340.ticket_to_ride.menus.MenuGameList">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/createGame"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/join_unstarted"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:id="@+id/unstarted_joiner"
                    android:gravity="left"
                    android:paddingBottom="5dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/unstarted_game_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/join_started"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:id="@+id/started_joiner"
                    android:gravity="left"
                    android:paddingBottom="5dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/started_game_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_own_game"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:id="@+id/starter"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_game_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:id="@+id/gameName"
                        android:gravity="center"/>

                    <EditText
                        android:id="@+id/gamename"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_margin="0dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:imeOptions="actionDone"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:id="@+id/playernum_spinner_layout">

                            <TextView
                                android:id="@+id/playernum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/number_players"
                                android:textSize="16sp"
                                android:gravity="center"/>
                            <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/playernum_spinner"
                                android:gravity="center">

                            </Spinner>

                        <Button
                            android:id="@+id/createGameButton"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/create_game"
                            android:layout_gravity="center"
                            android:enabled="false"/>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="35dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


