<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="fysh340.ticket_to_ride.game.fragments.DeckPresenter"
    android:id="@+id/faceUpCards"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:text="@string/select_your_dest_cards"
        android:gravity="center|top"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:id="@+id/first"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dest_card_select_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dest_card_select_1_city1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dest_card_sample_city1"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:gravity="center" />

            <TextView
                android:id="@+id/dest_card_select_1_city2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dest_card_sample_city2"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:gravity="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/dest_card_select_1_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_number"
            android:textSize="16sp"
            android:textColor="@color/gold"
            android:gravity="center"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dest_card_select_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dest_card_select_2_city1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dest_card_sample_city1"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:gravity="center" />

            <TextView
                android:id="@+id/dest_card_select_2_city2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dest_card_sample_city2"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:gravity="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/dest_card_select_2_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_number"
            android:textSize="16sp"
            android:textColor="@color/gold"
            android:gravity="center"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dest_card_select_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dest_card_select_3_city1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dest_card_sample_city1"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:gravity="center" />


            <TextView
                android:id="@+id/dest_card_select_3_city2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dest_card_sample_city2"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:gravity="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/dest_card_select_3_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_number"
            android:textSize="16sp"
            android:textColor="@color/gold"
            android:gravity="center"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/confirmButton"
        android:layout_gravity="center"
        android:text="@string/confirm"/>

</LinearLayout>

